--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
   "homepage": "https://github.com/panwan1040/ShortURL#readme",
   "dependencies": {
     "dotenv": "^16.0.3",
+    "easyqrcodejs": "^4.4.13",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "mongodb": "^4.11.0",
-    "nodemon": "^2.0.20"
+    "mongoose": "^6.7.0",
+    "nodemon": "^2.0.20",
+    "qrcode": "^1.5.1",
+    "shortid": "^2.2.16"
   }
 }
